--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "esbuild": "^0.17.19",
+    "jquery": "^3.7.0",
     "sass": "^1.62.1"
   },
   "scripts": {
