--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@rails/actiontext": "^7.0.5",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "esbuild": "^0.18.3",
     "jquery": "^3.7.0",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "trix": "^2.0.5"
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
