--- a/test/fixtures/evaluation_results.yml
+++ b/test/fixtures/evaluation_results.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  percentage_agreement: 
-  overall_percentage_agreement: 1.5
-  evaluation_record: one
+  combined_mean: 
+  total_percentage: 1.5
+  task: one
 
 two:
-  percentage_agreement: 
-  overall_percentage_agreement: 1.5
-  evaluation_record: two
+  combined_mean: 
+  total_percentage: 1.5
+  task: two
